# Myotube_Segmentation_CV

./: Makefile  README.md  app.py  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
models/: dataset.yaml  hyp.yaml
models/runs/segment/predict/labels/: 2024-08-16_00-23-06_A1_03_03__Best.txt
models/runs/segment/train/: args.yaml  results.csv
myotube_segmentation_cv/: __init__.py  dataset.py  features.py  plots.py
myotube_segmentation_cv/modeling/: __init__.py  predict.py  train.py
notebooks/: 1.0-Copy-Images.ipynb  2.0-Data-Augmentation.ipynb  3.0-Training-YOLO.ipynb  4.0-Predict-YOLO.ipynb
