[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "myotube_segmentarion_cv"
version = "0.0.1"
description = "Myotube image segmenter using semi-trained artificial intelligence models."
authors = [
  { name = "Carlos Palmieri, Alejandro S\u00e1nchez, Cynthia Quijas, Dabria Carrillo" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["myotube_segmentarion_cv"]
force_sort_within_sections = true
